--- a/datical.project
+++ b/datical.project
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="ASCII"?>
-<dbproject:Project xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:dbproject="http://datical.com/db/project/1.0" name="LOCALDB" storedLogicExternal="true" deployThreshold="stopOnError" runtimeCredentials="false" multiSchema="false" dbSchemaDefinition="dbDef" enableRowCount="true">
-  <dbDefs xsi:type="dbproject:OracleDbDef" name="TEST" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="TESTDEV" password="b3JhY2xl" contexts="dev" defaultSchemaName="TESTDEV" environment="DEV" sid="ORCL12" enableCompression="false"/>
-  <dbDefs xsi:type="dbproject:OracleDbDef" name="QA" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="TESTPQT" password="b3JhY2xl" contexts="qa" defaultSchemaName="TESTPQT" environment="QA" sid="ORCL12" enableCompression="false"/>
-  <plans name="LOCALDB" databaseDefs="//@dbDefs[name='TEST'] //@dbDefs[name='QA']"/>
-  <changelog href="platform:/resource/LOCALDB/Changelog/changelog.xml#//@databaseChangeLog"/>
+<dbproject:Project xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:dbproject="http://datical.com/db/project/1.0" name="SSPROJ" storedLogicExternal="true" deployThreshold="stopOnError" requireOptions="true" limitForecastProfiling="true" deployMode="quick" projectsId="73b1217f-f3b8-4f8b-a196-ea2c4cd7adac" runtimeCredentials="false" multiSchema="true" dbSchemaDefinition="project" schemaSelectionStep="SSREF" trackingSchema="DATICAL_TRACK_USER" enableRowCount="true">
+  <dbDefs xsi:type="dbproject:OracleDbDef" name="ORCL12" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="DATICAL_USER" password="oracle" contexts="INT" storageOptionCollectedAtSnapshot="true" labels="main" serviceName="ORCL12" enableCompression="false"/>
+  <dbDefs xsi:type="dbproject:OracleDbDef" name="ORCLDV" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="DATICAL_USER" password="oracle" contexts="INT" storageOptionCollectedAtSnapshot="true" labels="main and !abandoned" serviceName="ORCLDV" enableCompression="false"/>
+  <dbDefs xsi:type="dbproject:OracleDbDef" name="SSPQT" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="DATICAL_USER" password="oracle" contexts="QA" storageOptionCollectedAtSnapshot="true" labels="main and !abandoned" serviceName="ORCLQA" enableCompression="false"/>
+  <plans name="MAIN" description="Main release pipeline for shared selfservice schema" databaseDefs="//@dbDefs[name='ORCL12'] //@dbDefs[name='ORCLDV'] //@dbDefs[name='ORCLQA'] "/>
+  <changelog href="Changelog/changelog.xml#//@databaseChangeLog"/>
+  <releaseLabels name="main" description="MAIN Pipeline Label"/>
+  <releaseLabels name="abandoned" description="mark item to not progress any further"/>
+  <auditDB xsi:type="dbproject:OracleDbDef" name="AUDITDB" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="DATICAL_AUDIT_USER" password="oracle" dbDefType="audit" serviceName="ORCL12" enableCompression="false"/>
+  <schemas name="SCOTT"/>
+  <schemas name="TESTDEV"/>
+  <schemas name="TESTPQT"/>
 </dbproject:Project>
