Updated proj Properties

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -1,8 +1,8 @@
 sqlScmSQLBaseDir=datical_packaging
 
-sqlScmPath=../sql
-ORCLQA.sqlScmPath=../sql
-ddbScmPath=.
+sqlScmPath=C:\app\oracle\svn\VALIC\pgm_dev
+ORCLQA.sqlScmPath=C:\app\oracle\svn\VALIC\pgm_dev
+ddbScmPath=C:\app\oracle\svn\VALIC\pgm_datical
 
 sqlScmSystem=git
 ddbScmSystem=git
