--- a/datical.project
+++ b/datical.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ASCII"?>
-<dbproject:Project xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:dbproject="http://datical.com/db/project/1.0" name="PGMTST1" storedLogicExternal="true" deployThreshold="stopOnError" requireOptions="true" limitForecastProfiling="true" deployMode="quick" projectsId="73b1217f-f3b8-4f8b-a196-ea2c4cd7adac" runtimeCredentials="false" multiSchema="true" dbSchemaDefinition="project" schemaSelectionStep="ORCL12" trackingSchema="DATICAL_TRACK_USER" enableRowCount="true">
+<dbproject:Project xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:dbproject="http://datical.com/db/project/1.0" name="PGMTST1" storedLogicExternal="true" deployThreshold="stopOnError" requireOptions="true" limitForecastProfiling="true" deployMode="quick" projectsId="73b1217f-f3b8-4f8b-a196-ea2c4cd7adac" runtimeCredentials="false" multiSchema="true" dbSchemaDefinition="project" schemaSelectionStep="ORCL12" trackingSchema="DATICAL_TRACK" enableRowCount="true">
   <dbDefs xsi:type="dbproject:OracleDbDef" name="ORCL12" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="DATICAL_USER" password="oracle" contexts="INT" storageOptionCollectedAtSnapshot="true" labels="main" serviceName="ORCL12" enableCompression="false"/>
   <dbDefs xsi:type="dbproject:OracleDbDef" name="ORCLDV" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="DATICAL_USER" password="oracle" contexts="INT" storageOptionCollectedAtSnapshot="true" labels="main and !abandoned" serviceName="ORCLDV" enableCompression="false"/>
   <dbDefs xsi:type="dbproject:OracleDbDef" name="ORCLQA" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="DATICAL_USER" password="oracle" contexts="QA" storageOptionCollectedAtSnapshot="true" labels="main and !abandoned" serviceName="ORCLQA" enableCompression="false"/>
@@ -7,7 +7,7 @@
   <changelog href="Changelog/changelog.xml#//@databaseChangeLog"/>
   <releaseLabels name="main" description="MAIN Pipeline Label"/>
   <releaseLabels name="abandoned" description="mark item to not progress any further"/>
-  <auditDB xsi:type="dbproject:OracleDbDef" name="AUDITDB" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="DATICAL_AUDIT_USER" password="oracle" dbDefType="audit" serviceName="ORCL12" enableCompression="false"/>
+  <auditDB xsi:type="dbproject:OracleDbDef" name="AUDITDB" driver="oracle.jdbc.OracleDriver" hostname="127.0.0.1" port="1521" username="DATICAL_AUDIT" password="oracle" dbDefType="audit" serviceName="ORCL12" enableCompression="false"/>
   <schemas name="SCOTT"/>
   <schemas name="TESTDEV"/>
   <schemas name="TESTPQT"/>
