Updated deployPackager File

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -1,8 +1,8 @@
 sqlScmSQLBaseDir=datical_packaging
 
-sqlScmPath=C:\app\oracle\svn\VALIC\pgm_dev
-ORCLQA.sqlScmPath=C:\app\oracle\svn\VALIC\pgm_dev
-ddbScmPath=C:\app\oracle\svn\VALIC\pgm_datical
+sqlScmPath=../pgm_dev
+ORCLQA.sqlScmPath=../pgm_dev
+ddbScmPath=.
 
 sqlScmSystem=git
 ddbScmSystem=git
