--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -9,6 +9,7 @@ ddbScmSystem=git
 
 sqlScmBranch=master
 ddbScmBranch=master
+ORCLQA.sqlScmBranch=qa
 
 sqlScmLastImportID=4776eab
 ORCLQA.sqlScmLastImportID=4776eab
