updated deployer packager scm path

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -1,8 +1,8 @@
 sqlScmSQLBaseDir=datical_packaging
 
-sqlScmPath=../pgm_dev
-ORCLQA.sqlScmPath=../pgm_dev
-ddbScmPath=.
+sqlScmPath="c:/app/oracle/svn/VALIC/pgm_dev"
+ORCLQA.sqlScmPath="c:/app/oracle/svn/VALIC/pgm_dev"
+ddbScmPath="c:/app/oracle/svn/VALIC/pgm_datical" 
 
 sqlScmSystem=git
 ddbScmSystem=git
