added scmBranchHandling and ignored backup directory

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -1,3 +1,4 @@
+
 sqlScmSQLBaseDir=datical_packaging
 
 sqlScmPath=c:\\app\\oracle\\svn\\VALIC\\pgm_dev
@@ -10,8 +11,10 @@ ddbScmSystem=git
 sqlScmBranch=master
 ddbScmBranch=master
 ORCLQA.sqlScmBranch=qa
+scmBranchHandling=true
 
 sqlScmLastImportID=4776eab
+
 ORCLQA.sqlScmLastImportID=4776eab
 
 
