--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -11,7 +11,7 @@ ddbScmSystem=git
 sqlScmBranch=master
 ddbScmBranch=master
 ORCLQA.sqlScmBranch=qa
-scmBranchHandling=true
+scmBranchHandling=directory
 
 sqlScmLastImportID=4776eab
 
