Datical DB Deployment Packager Deployment Pipeline: MAIN Deploy / Rollback Scripts Processed (Associated Labels): TESTDEV\T3.tbl / none (T3.tbl,main) (INT)

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -1,24 +1,16 @@
-
-sqlScmSQLBaseDir=datical_packaging
-
-sqlScmPath=c:\\app\\oracle\\svn\\VALIC\\pgm_dev
-ORCLQA.sqlScmPath=c:\\app\\oracle\\svn\\VALIC\\pgm_dev
-ddbScmPath=c:\\app\\oracle\\svn\\VALIC\\pgm_datical 
-
+#Wed Jan 17 23:10:59 CST 2018
+scmBranchHandling=directory
 sqlScmSystem=git
 ddbScmSystem=git
-
+ORCLQA.sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
+enableBackupRestore=ORCL12
+ORCLQA.sqlScmLastImportID=4776eab
+databaseBackupRestoreLocation=DATA_PUMP_DIR
+ORCLQA.sqlScmBranch=qa
+sqlScmLastImportID=4356fb1
 sqlScmBranch=master
 ddbScmBranch=master
-ORCLQA.sqlScmBranch=qa
-scmBranchHandling=directory
-
-sqlScmLastImportID=4776eab
-
-ORCLQA.sqlScmLastImportID=4776eab
-
-
-enableBackupRestore=ORCL12
-
-databaseBackupRestoreLocation=DATA_PUMP_DIR
+ddbScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_datical 
 ddlExcludeList="package, packagebody, procedure, function, trigger, view"
+sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
+sqlScmSQLBaseDir=datical_packaging
