--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -7,8 +7,8 @@ enableBackupRestore=ORCL12
 sqlScmSQLBaseDir=datical_packaging
 
 ORCLQA.sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
-ORCLQA.sqlScmLastImportID=4776eab
-ORCLQA.sqlScmBranch=qa
+ORCLQA.sqlScmLastImportID=b8c4921
+ORCLQA.sqlScmBranch=QA
 
 databaseBackupRestoreLocation=DATA_PUMP_DIR
 
