Datical DB Deployment Packager Deployment Pipeline: MAIN Deploy / Rollback Scripts Processed (Associated Labels): TESTDEV\TESTDEV.SP_TEST1.prc / none (TESTDEV.SP_TEST1.prc,main) (int)

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -1,22 +1,16 @@
-#Wed Jan 17 23:10:59 CST 2018
+#Wed Jul 11 10:09:11 CDT 2018
 scmBranchHandling=scmswitch
 sqlScmSystem=git
 ddbScmSystem=git
-enableBackupRestore=ORCL12
-
-sqlScmSQLBaseDir=datical_packaging
-
 ORCLQA.sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
+enableBackupRestore=ORCL12
 ORCLQA.sqlScmLastImportID=b8c4921
-ORCLQA.sqlScmBranch=QA
-
 databaseBackupRestoreLocation=DATA_PUMP_DIR
-
-sqlScmLastImportID=b8c4921
+ORCLQA.sqlScmBranch=QA
+sqlScmLastImportID=04db458
 sqlScmBranch=Integration
-sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
-
 ddbScmBranch=master
 ddbScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_datical 
-
 ddlExcludeList="package, packagebody, procedure, function, trigger, view"
+sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
+sqlScmSQLBaseDir=datical_packaging
