--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -1,5 +1,6 @@
 #Wed Jul 11 11:52:02 CDT 2018
 scmBranchHandling=scmswitch
+sqlScmDoCheckout=true
 sqlScmSystem=git
 ddbScmSystem=git
 ORCLQA.sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
