--- a/daticaldb.properties
+++ b/daticaldb.properties
@@ -1,6 +1,7 @@
 #Added C:\app\oracle\product\11.2.0\dbhome_1\jdbc\lib to drivers
 #Mon Jan 15 20:56:54 CST 2018
-drivers=C\:\\app\\DaticalDB\\plugins;C\:\\app\\oracle\\product\\12.1.0\\dbhome_1\\jdbc\\lib\\ojdbc7.jar
+drivers=C\:\\app\\oracle\\product\\12.1.0\\dbhome_1\\jdbc\\lib\\ojdbc7.jar;C\:\\app\\DaticalDB\\plugins
 db2.driverClass=com.ibm.db2.jcc.DB2Driver
 com.datical.jdbc.driverClass=com.datical.jdbc.oracle.DaticalOracleDriver
+#com.datical.jdbc.driverClass=oracle.jdbc.OracleDriver
 sqlplus=C\:\\app\\oracle\\product\\12.1.0\\dbhome_1\\BIN\\sqlplus.exe
