Commented out backup Property

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -15,4 +15,4 @@ ddbScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_datical
 ddlExcludeList="package, packagebody, procedure, function, trigger, view"
 sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
 sqlScmSQLBaseDir=datical_packaging
-databaseBackupRestoreMethod=OracleFlashback
+#databaseBackupRestoreMethod=OracleFlashback
