Some more Property changer .. letas make it work

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -6,7 +6,8 @@ ddbScmSystem=git
 ORCLQA.sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
 enableBackupRestore=ORCL12
 ORCLQA.sqlScmLastImportID=402244e
-databaseBackupRestoreLocation=DATA_PUMP_DIR
+databaseBackupMode=
+databaseBackupRestoreLocation=
 ORCLQA.sqlScmBranch=QA
 sqlScmLastImportID=660b2bb
 sqlScmBranch=Integration
