Updated Backup Mode property

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -6,7 +6,7 @@ ddbScmSystem=git
 ORCLQA.sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
 enableBackupRestore=ORCL12
 ORCLQA.sqlScmLastImportID=402244e
-databaseBackupMode=
+databaseBackupMode=ON_DEMAND
 databaseBackupRestoreLocation=
 ORCLQA.sqlScmBranch=QA
 sqlScmLastImportID=660b2bb
