Datical DB Deployment Packager   Deployment Pipeline: MAIN   Deploy / Rollback Scripts Processed (Associated Labels): TESTDEV\TESTDEV.SP_TEST1.prc / none (TESTDEV.SP_TEST1.prc,main) (int) TESTDEV\TESTDEV.SP_TEST2.prc / none (TESTDEV.SP_TEST2.prc,main) (int) TESTDEV\TESTDEV.T4.tbl / none (TESTDEV.T4.tbl,main) (int)

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -4,24 +4,25 @@ sqlScmDoCheckout=true
 sqlScmSystem=git
 ddbScmSystem=git
 enableBackupRestore=true
-databaseBackupMode=ALWAYS
+databaseBackupMode=always
 databaseBackupRestoreLocation=DATICAL_DATA_PUMP_DIR
 
 sqlScmBranch=Integration
 ORCLQA.sqlScmBranch=QA
 ddbScmBranch=master
 
-sqlScmLastImportID=8611dd0
+sqlScmLastImportID=75de5c9
 ORCLQA.sqlScmLastImportID=402244e
 
 
-sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
-ORCLQA.sqlScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_dev
+sqlScmPath=c:\\app\\oracle\\svn\\VALIC\\pgm_dev
+ORCLQA.sqlScmPath=c:\\app\\oracle\\svn\\VALIC\\pgm_dev
 
 
-ddbScmPath=c\:\\app\\oracle\\svn\\VALIC\\pgm_datical 
+ddbScmPath=c:\\app\\oracle\\svn\\VALIC\\pgm_datical
 
 ddlExcludeList="package, packagebody, procedure, function, trigger, view"
 sqlScmSQLBaseDir=datical_packaging
+validateRollback = none
 
 #databaseBackupRestoreMethod=OracleFlashback
