--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -6,6 +6,8 @@ ddbScmSystem=git
 enableBackupRestore=true
 databaseBackupMode=always
 databaseBackupRestoreLocation=DATICAL_DATA_PUMP_DIR
+databaseBackupRestoreMethod=BackupRestoreOracleFlashback
+extensionsPath=C:\\app\\DaticalDB\\scripts\\extensions
 
 sqlScmBranch=Integration
 ORCLQA.sqlScmBranch=QA
