Added Container DB Property

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -8,6 +8,7 @@ databaseBackupMode=always
 databaseBackupRestoreLocation=DATICAL_DATA_PUMP_DIR
 databaseBackupRestoreMethod=BackupRestoreOracleFlashbackNew
 extensionsPath=C:\\app\\DaticalDB\\scripts\\extensions
+ContainerDB=CDB1
 
 sqlScmBranch=Integration
 ORCLQA.sqlScmBranch=QA
