Changed Backup Mode to On Demand

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -4,7 +4,8 @@ sqlScmDoCheckout=true
 sqlScmSystem=git
 ddbScmSystem=git
 enableBackupRestore=true
-databaseBackupMode=always
+#databaseBackupMode=always
+databaseBackupMode=on_demand
 databaseBackupRestoreLocation=DATICAL_DATA_PUMP_DIR
 databaseBackupRestoreMethod=BackupRestoreOracleFlashbackNew
 extensionsPath=C:\\app\\DaticalDB\\scripts\\extensions
